--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='content/index.html'" />
+    <meta http-equiv="refresh" content="0; url='output/index.html'" />
   </head>
   <body>
     <p>Please follow <a href="https://www.w3docs.com">this link</a>.</p>
